name:           unordered-containers
version:        0.2.8.0
synopsis:       Efficient hashing-based container types
description:
  Efficient hashing-based container types.  The containers have been
  optimized for performance critical use, both in terms of large data
  quantities and high speed.
  .
  The declared cost of each operation is either worst-case or
  amortized, but remains valid even if structures are shared.
license:        BSD3
license-file:   LICENSE
author:         Johan Tibell
maintainer:     johan.tibell@gmail.com
Homepage:       https://github.com/tibbe/unordered-containers
bug-reports:    https://github.com/tibbe/unordered-containers/issues
copyright:      2010-2014 Johan Tibell
                2010 Edward Z. Yang
category:       Data
build-type:     Simple
cabal-version:  >=1.8
extra-source-files: CHANGES.md
tested-with:    GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

flag debug
  description:  Enable debug support
  default:      False

library
  exposed-modules:
    Data.HashMap.Strict
  other-modules:
    Data.HashMap.Array
    Data.HashMap.Base
    Data.HashMap.PopCount
    Data.HashMap.Unsafe
    Data.HashMap.UnsafeShift

  build-depends:
    base >= 4 && < 5,
    deepseq >= 1.1,
    hashable >= 1.0.1.1 && < 1.3,
    ghc-prim,
    primitive,
    breakpoint

  if impl(ghc < 7.4)
    c-sources: cbits/popc.c

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(debug)
    cpp-options: -DASSERTS
